Added 'tenderized' attribute to meat
Fruit leather added?
Fixed pies?
Cauldrons have different sealed perish rates & cook times
Cooked meat can be glazed with honey/syrup
Nutrition pulled under control?
Gelatin-making process more complicated

1.6.3
RenderIngredients now uses selectiveElements to cut down on files
Breaded mushrooms added

1.6.2
Ancient Tools Compatibility added (bread/breadcrumbs and meat can be used in stuff)
Lard dries into Hardened Lard; replaces liquid lard in grid recipes
Meat/sausage & veggies can be boiled in the saucepan
Dehydrated Wildcraft berries can be used in meat stews
Chopped food nutrition nerfed to match unchopped variants
Dried meat lost nutrition bonus, gained healing
Log errors quashed
Japanese translation updated (thanks to macoto_hino)
English translation actually refined (thanks to Ledyanaya Sonya)
Meat hook transform reviewed
Elderberry cider can be used in meat stews
Egg nutrition fixed
Various broth recipes fixed
Oven transforms reviewed
Handbook links fixed
Vinegar & many EF foods enabled in the handbook (watch out for crashes when clicking on part-baked items)

1.6.1
Liquid eggs can be used in scrambled egg recipe
Breadedball & Acornbreadedball kneading recipe fixed
Text fixed
Fish broth can actually be made
Grid recipes using oil/lard revised
Water & brine boil to salt at 100 degrees
Sausage and meat dry instead of cure; timer adjusted so it should take about 2 days to dry out in ideal situations
Vinegar is a vanilla item; EF now patches it instead of overwriting it
Fish sauce moved from game domain to EF domain (includes remap); spoil time nerfed

1.6.0
Blocks from Expanded Foods separated into A Culinary Artillery (thanks to Vinter Nacht)
Added egg cracking - eggs now must be cracked into a liquid container; makes yolks & shells [will make work in saucepan/cauldron later] (could probably use liquid egg in more foods like scrambled eggs, please recommend some)