@@ -136,47 +136,25 @@
 		"@*-(tendercharred|cookedcharred)": {satiety: 85, foodcategory: "Protein"}
 	},
 	transitionablePropsByType: {
-		"*-smashed": [{	
+		"@*-(smashed|raw)": [{	
 			type: "Perish",
-			freshHours: { avg: 24 },
-			transitionHours: { avg: 48 },
+			freshHours: { avg: 48 },
+			transitionHours: { avg: 12 },
 			transitionedStack: { type: "item", code: "game:rot" },
 			transitionRatio: 1
 			}
 		],
-		"@*-(tenderpartbaked|tender)": [{
-			type: "Perish",
-			freshHours: { avg: 100 },
-			transitionHours: { avg: 72 },
-			transitionedStack: { type: "item", code: "game:rot" },
-			transitionRatio: 1
-		}],
-		"*-tendercharred": [{
-			type: "Perish",
-			freshHours: { avg: 200 },
-			transitionHours: { avg: 144 },
-			transitionedStack: { type: "item", code: "game:rot" },
-			transitionRatio: 1
-		}],
-		"*-raw": [{
-			type: "Perish",
-			freshHours: { avg: 18 },
-			transitionHours: { avg: 72 },
-			transitionedStack: { type: "item", code: "game:rot" },
-			transitionRatio: 1
-			}
-		],
-		"@*-(cookedpartbaked|cooked)": [{
-			type: "Perish",
-			freshHours: { avg: 60 },
-			transitionHours: { avg: 96 },
-			transitionedStack: { type: "item", code: "game:rot" },
-			transitionRatio: 1
-		}],
-		"*-cookedcharred": [{
+		"@*-(tenderpartbaked|tender|cookedpartbaked|cooked)": [{
 			type: "Perish",
 			freshHours: { avg: 120 },
-			transitionHours: { avg: 192 },
+			transitionHours: { avg: 36 },
+			transitionedStack: { type: "item", code: "game:rot" },
+			transitionRatio: 1
+		}],
+		"@*-(tendercharred|cookedcharred)": [{
+			type: "Perish",
+			freshHours: { avg: 240 },
+			transitionHours: { avg: 72 },
 			transitionedStack: { type: "item", code: "game:rot" },
 			transitionRatio: 1
 		}],
