@@ -357,4 +357,27 @@
   "shapeless": true,
   "output": { type: "item", code: "superfuel:firelog", "quantity": 8 }
  },
+ {
+  "ingredientPattern": "ASL",
+	recipeGroup: 3,
+  "ingredients": {
+    "A": {
+      "type": "item", 
+	  "code": "game:firewood", "quantity": 8
+    },
+    "S": {
+      "type": "item",
+      "code": "game:drygrass", "quantity": 4
+    },
+	"L": { 
+      type: "block",
+      code: "expandedfoods:hardlard",
+      "quantity":  1
+    },			
+  },	
+  "width": 3,
+  "height": 1,
+  "shapeless": true,
+  "output": { type: "item", code: "superfuel:firelog", "quantity": 8 }
+ },
 ]
