@@ -35,6 +35,8 @@ Gelatin-making process more complicated
 1.6.3
 RenderIngredients now uses selectiveElements to cut down on files
 Breaded mushrooms added
+Braziers/Superfuels recipes updated - DONE!!!
+PS meatnuggets have proper perish rates; charred meatnugget perish rate nerfed - DONE!!!
 
 1.6.2
 Ancient Tools Compatibility added (bread/breadcrumbs and meat can be used in stuff)
